# uml_mcp

./: .gitignore  README.md  THIRD_PARTY_LICENSES.md
.cursor/: mcp.json
.cursor/rules/: uml-code-sync.mdc  window-gui-documentation.mdc
ai-software-engineering/00-concept/: README.md  database-design.md  interface-design.md  product-design.md  software-design.md
ai-software-engineering/01-logic/: README.md  detailed-design-md-mv-workbench.md  detailed-design-software-modeling-workbench.md  detailed-design-sync-formats.md  detailed-design-workspace.md  system-design.md
ai-software-engineering/02-physical/: README.md
ai-software-engineering/03-ops/: README.md  developer-manual.md  mvwb-workbench.md  software-modeling-workbench.md  user-manual.md
examples/sync-demo/impl_cpp_project/: CMakeLists.txt  README.md
examples/sync-demo/impl_cpp_project/include/acme/: base_entity.hpp  helloworld.hpp  item.hpp
examples/sync-demo/impl_cpp_project/src/: discount_rule.cpp  order.cpp
model-view-workbench/: README.md  SCHEMA_RULES.md  THIRD_PARTY_LICENSES.md  build.py  dev.py  install.py  npm_util.py  package-lock.json  package.json  publish.py  run.py
software-modeling-workbench/: .gitignore  MIGRATION.md  README.md  SCHEMA_CHANGELOG.md  THIRD_PARTY_LICENSES.md  build.py  dev.py  install.py  npm_util.py  package-lock.json  package.json  run_exe.py  test.py
uml-vue-sdi/: README.md  build.py  dev.py  index.html  install.py  npm_util.py  package-lock.json  package.json  project_build.py  publish.py  run.py  run_exe.py  run_web.py  test.py  tsconfig.json  vite.config.ts
(+281 files in other folders)
